feat: add personal recipe favorites
